syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "VeloTiming.Proto";

message Race {
    int32 Id = 1;
    string Name = 2;
    string Description = 3;
    google.protobuf.Timestamp Date = 4;
}

service Races {
    rpc getRaces (google.protobuf.Empty) returns (GetRacesResponse);
    rpc getRace (GetRaceRequest) returns (Race);
    rpc updateRace (Race) returns (Race);
    rpc deleteRace (DeleteRaceRequest) returns (google.protobuf.Empty);
}

message GetRacesResponse {
    repeated Race Races = 1;
}

message GetRaceRequest {
    int32 RaceId = 1;
}

message DeleteRaceRequest {
    int32 RaceId = 1;
}